SUBDIRS = figs
NAME = userbook
SGML_FILES = userbook.sgml usercont.sgml usermeta.sgml user1.01.sgml user1.02.sgml user1.03.sgml user1.04.sgml user1.05.sgml user2.01.sgml user2.02.sgml user2.03.sgml user2.04.sgml user2.05.sgml user2.06.sgml user2.07.sgml user2.08.sgml user2.09.sgml user2.10.sgml user2.11.sgml user3.01.sgml user3.02.sgml user3.03.sgml user3.04.sgml user3.05.sgml user3.06.sgml user3.07.sgml 

include $(top_srcdir)/Makefile.rules
include $(top_srcdir)/Makefile.common

# Local variables:
# mode: makefile
# end:
