AC_INIT(swarm.macros)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(swarmspecs, 2.1.1)

version=2.1.36
date_version=2001-02-05
if test -f /etc/SuSE-release; then
  release=1.suse
  demo_release=1.suse
  base_requires='egcs, xdevel, libpng, libz, xpm, blt, tcl >= 8.0.4, tk >= 8.0.4'
  kaffe_version=2000.02.26
else
  release=1.rh6
  demo_release=1.rh6
  base_requires='gcc, gcc-objc, XFree86-devel, libpng, libpng-devel, zlib, xpm, xpm-devel, blt, tcl >= 8.0.4, tk >= 8.0.4'
  if test $host_cpu = powerpc; then
    kaffe_version=2000.02.26
  else
    kaffe_version=1.0.5
  fi
fi
hdf5_version=1.2.1
jikes_version=0.47

copyright='LGPL'
packager='Red Hat Contrib|Net <rhcn-bugs@redhat.com>'
distribution='Red Hat Contrib|Net'
vendor='Swarm Development Group'
url='http://www.swarm.org'
ftproot='ftp://ftp.swarm.org/pub/swarm'

macros=$srcdir/swarm.macros
rules=$srcdir/swarm.rules
AC_SUBST_FILE(macros)
AC_SUBST_FILE(rules)

AC_SUBST(version)
AC_SUBST(date_version)
AC_SUBST(release)
AC_SUBST(demo_release)
AC_SUBST(hdf5_version)
AC_SUBST(jikes_version)
AC_SUBST(kaffe_version)
AC_SUBST(base_requires)

AC_SUBST(copyright)
AC_SUBST(packager)
AC_SUBST(distribution)
AC_SUBST(vendor)
AC_SUBST(url)
AC_SUBST(ftproot)

AC_OUTPUT([Makefile README.i386 README.ppc swarm.spec swarm-hdf5.spec swarmdemos.spec])

# Local variables:
# mode: m4
# end:


