dnl  AUTOCONF configuration for AVCALL
dnl  Bruno Haible 2000-04-02
dnl
AC_INIT(avcall.h.in)
AC_CONFIG_HEADER(avcall.h)
AC_PROG_CC
LT_AC_PROG_SED
AC_SUBST(SED)
AC_PROG_CPP
AC_PROG_GCC_TRADITIONAL
CL_CC_GCC
CL_AS_UNDERSCORE
CL_PROG_RANLIB
AC_PROG_MAKE_SET
CL_PROG_INSTALL
CL_PROG_CP
CL_PROG_LN
CL_CANONICAL_HOST(..)
#PACKAGE=avcall
AC_DISABLE_SHARED
AC_LIBTOOL_WIN32_DLL
AC_PROG_LIBTOOL
CL_PCC_STRUCT_RETURN
CL_SMALL_STRUCT_RETURN
CL_IREG_FLOAT_RETURN
CL_LONGLONG
CL_CANONICAL_HOST_CPU_FOR_FFCALL
AC_OUTPUT(Makefile)
