SUBDIRS = objc doc m4

CURRENT = 0
REVISION = 0
AGE = 0

CSRC = archive.c class.c encoding.c gc.c hash.c init.c \
	misc.c nil_method.c objects.c sarray.c selector.c sendmsg.c thr.c 

MSRC = NXConstStr.m Object.m Protocol.m linking.m mframe.m

EXTRA_DIST = thr-dce.c thr-decosf1.c thr-irix.c thr-mach.c thr-os2.c \
	thr-posix.c thr-pthreads.c thr-single.c thr-solaris.c thr-vxworks.c \
	thr-win32.c config

INCLUDES = -I$(top_srcdir)/objc -I$(top_srcdir)

lib_LTLIBRARIES = @LIBOBJC_LA@
noinst_LTLIBRARIES = libobjc_.la
EXTRA_LTLIBRARIES = libobjc.la
bin_PROGRAMS = @OBJC_DLL@
EXTRA_PROGRAMS = objc.dll

libobjc_la_SOURCES = 
libobjc_la_LDFLAGS = -version-info $(CURRENT):$(REVISION):$(AGE) -rpath $(libdir)
libobjc_la_LIBADD = libobjc_.la

libobjc__la_SOURCES = $(CSRC) $(MSRC)
libobjc__la_LDFLAGS = -L$(dir $(shell $(CC) -print-libgcc-file-name))
libobjc__la_LIBADD = $(objc_thread_lo) -lgcc
libobjc__la_DEPENDENCIES = $(objc_thread_lo)

override CPPFLAGS += -DBUILDING_LIBOBJC

objc_thread_lo = @OBJC_THREAD_FILE@.lo

encoding.lo gc.lo sendmsg.lo: compiler-info.h

COMPILERINFOHEADER = @COMPILERINFOHEADER@

compiler-info.h: $(COMPILERINFOHEADER)
	cp $(COMPILERINFOHEADER) $@

if USEDLL
DLLOBJS = $(addsuffix .lo,$(basename $(libobjc__la_SOURCES)))

objc.dll: libobjc_.la objc.dll.c
	$(CC) -c $(srcdir)/objc.dll.c -o objc.dll.lo
	$(DLLWRAP) --export-all --output-def libobjc.def --implib libobjcdll.a --driver-name $(CC) -o objc.dll objc.dll.lo $(DLLOBJS) $(basename $(objc_thread_lo)).o

install-data-local: 
	$(INSTALL) libobjcdll.a $(libdir)
	ranlib $(libdir)/libobjcdll.a
endif

#CC1OBJ = @gccdir@/cc1obj

#compiler-info.h:
#	echo "" > tmp-compiler
#	echo "/* This file is automatically generated */" > $@
#	$(CC1OBJ) -print-objc-runtime-info tmp-compiler >> $@
#	$(RM) tmp-compiler
